# tobi_robot

./: .gitignore  CMakeLists.txt  README.md
tobi_bringup/: CMakeLists.txt  package.xml
tobi_bringup/config/: bartMekaConfig.yaml  katana6M180_G.cfg  logiCalib.yaml  manipulation.rviz  picknplace_transitions.cfg
tobi_bringup/launch/: bart_meka.launch  bart_sample.launch  biron_base_hardware.launch  biron_sim_base_hardware.launch  calib_picknplace.launch  katana.launch  manipulation.launch  move_group_2of4.launch  move_group_3of4.launch  navigation.launch  people_tracker_robot.launch  people_tracker_robot_meka.launch  picknplace.launch  planning_context_2of4.launch  planning_context_3of4.launch  robot_upload.launch  ros4rsb.launch  rviz.launch  rviz_2of4.launch  rviz_3of4.launch  sim_link_broadcaster.launch  tobi.launch  usb_logi.launch  xtion.launch  xtion2.launch  xtion2upper.launch  xtion_filter_chain.launch
tobi_navigation/: .gitignore  CMakeLists.txt  package.xml
tobi_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_rec.yaml  costmap_global_costmap_params.yaml  costmap_local_costmap_params.yaml  laser_config_ownfilter.yaml  leg_laser_config_ownfilter.yaml  move_base_params.yaml
tobi_navigation/launch/: amcl.launch  gmapping.launch  navigation.launch  navigation_map.launch  navigation_nomap.launch  tobi_config.launch  tobi_navigation.launch  tobi_navigation_mob_map.launch  tobi_navigation_mob_nomap.launch  tobi_navigation_sim_map.launch  tobi_navigation_sim_nomap.launch
tobi_navigation/maps/: ROS_map_m5_20120730.yaml  apartment.yaml  arena2013.pgm  arena2013.yaml  arenaB.yaml  brazil_190714_1402.pgm  brazil_200714_1035.pgm  brazil_200714_1035.yaml  brazil_worldcup.pgm  centralLabVersion0.pgm  demoGeniale.yaml  hefei_version0.pgm  m5.pgm  (+29 more)
(+141 files in other folders)
